--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,7 @@
   "name": "dianamorales",
   "version": "0.0.1",
   "builders": {
+    "assets": "0.x",
     "styles": "2.x",
     "store": "0.x",
     "docs": "0.x"
@@ -18,8 +19,8 @@
     "vtex.store-components": "3.x",
     "vtex.styleguide": "9.x",
     "vtex.slider": "0.x",
+    "vtex.store-image": "0.x",
     "vtex.carousel": "2.x",
-    "vtex.shelf": "1.x",
     "vtex.menu": "2.x",
     "vtex.minicart": "2.x",
     "vtex.product-details": "1.x",
