--- a/store/blocks/global/screen/home.jsonc
+++ b/store/blocks/global/screen/home.jsonc
@@ -1,9 +1,8 @@
 {
-  "store.home": { 
+  "store.home": {
     "blocks": [
       "flex-layout.row#text_one--home",
-      "slider-layout#text-test",
-      "list-context.image-list#demo"
+      "list-context.image-list#know-our-activities"
     ]
   }
-} 
+}
