component is added to show slider section 1 and section 2

--- a/store/blocks/global/screen/home.jsonc
+++ b/store/blocks/global/screen/home.jsonc
@@ -1,8 +1,10 @@
 {
   "store.home": {
     "blocks": [
-      "flex-layout.row#text_one--home",
-      "list-context.image-list#know-our-activities"
+      "list-context.image-list#generl-info",
+      "image#promotion-week",
+      "flex-layout.row#text_one--home"
     ]
   }
 }
+//"list-context.image-list#know-our-activities"
