Folder restructuring: organized views into separate components and screens. Created distinct folders for each view and its corresponding components to improve project organization and maintainability.

--- a/store/blocks/global/components/home_image--promotion-week.jsonc
+++ b/store/blocks/global/components/home_image--promotion-week.jsonc
@@ -4,7 +4,7 @@
         "props": {
           "src": "assets/img/banner-los-impredibles-ara.webp",
           "width": "80%",
-          "blockClass": "promotion-week-image"
+          "blockClass": ["promotion-week-image"]
         }
       }
 }
