--- a/store/blocks/phone/screen/home/main_slider.jsonc
+++ b/store/blocks/phone/screen/home/main_slider.jsonc
@@ -3,7 +3,7 @@
     "children": [
       "flex-layout.row#phone__main-slider",
       "rich-text#title-section-one-phone",
-      "slider-layout#text-test"
+      "flex-layout.row#home--slider"
     ]
   }
 }
