--- a/store/blocks/desktop/sreen/main_slider.jsonc
+++ b/store/blocks/desktop/sreen/main_slider.jsonc
@@ -3,7 +3,7 @@
     "children": [
       "flex-layout.row#desktop__main-slider",
       "rich-text#title-section-one-desktop",
-      "slider-layout#text-test"
+      "flex-layout.row#home--slider"
     ]
   }
 }
