Add CSS styling to slider pagination and integrate Rich Text component
 - formatted the CSS to show arrows in the middle part of the image
- Added the Rich Text component to the second section of the home page.

--- a/store/blocks/desktop/components/main_rich-text.jsonc
+++ b/store/blocks/desktop/components/main_rich-text.jsonc
@@ -7,5 +7,14 @@
       "font": "t-heading-10",
       "blockClass": ["texto-section-one-desktop"]
     }
+  },
+  "rich-text#title-section-two-desktop": {
+    "props": {
+      "text": "An amazing product",
+      "textAlignment": "LEFT",
+      "textPosition": "LEFT",
+      "font": "t-heading-10",
+      "blockClass": ["texto-section-two-desktop"]
+    }
   }
 }
