--- a/store/blocks/desktop/sreen/main_slider.jsonc
+++ b/store/blocks/desktop/sreen/main_slider.jsonc
@@ -3,7 +3,8 @@
     "children": [
       "flex-layout.row#desktop__main-slider",
       "rich-text#title-section-one-desktop",
-      "flex-layout.row#home--slider"
+      "flex-layout.row#home--slider",
+      "rich-text#title-section-two-desktop"
     ]
   }
 }
