--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,7 @@
     "vtex.carousel": "2.x",
     "vtex.menu": "2.x",
     "vtex.minicart": "2.x",
+    "vtex.modal-layout": "0.x",
     "vtex.product-details": "1.x",
     "vtex.product-kit": "1.x",
     "vtex.search-result": "3.x",
