--- a/store/blocks/tablet/components/main_slider-.jsonc
+++ b/store/blocks/tablet/components/main_slider-.jsonc
@@ -1,20 +1,18 @@
 {
-  "flex-layout.row#desktop__main-slider": {
-    "title": "home section banner desktop",
-    "children": ["list-context.image-list#desktop__container-imagenes"]
+    "flex-layout.row#tablet__main-slider": {
+    "children": ["list-context.image-list#phone__container-imagenes"]
   },
-  "list-context.image-list#desktop__container-imagenes": {
+  "list-context.image-list#phone__container-imagenes": {
     "title": "list image home banner",
     "children": ["slider-layout#phone__slider"],
     "props": {
-      "height": 422,
-      "width": 1280,
+      "height": 650,
       "images": [
         {
           "image": "/arquivos/desktop-home-banner.png",
           "description": "main image of the clock",
           "width": "100%",
-          "link#image-banner": {
+          "link#id": {
             "props": {
               "label": "",
               "href": "#"
@@ -27,7 +25,7 @@
   "slider-layout#phone__slider": {
     "props": {
       "itemsPerPage": {
-        "desktop": 1,
+        "desktop": 5,
         "tablet": 3,
         "phone": 1
       }
