--- a/store/blocks/tablet/components/main_rich-text.jsonc
+++ b/store/blocks/tablet/components/main_rich-text.jsonc
@@ -1,11 +1,12 @@
 {
     "rich-text#title-section-one-tablet": {
-    "props": {
-      "text": "An amazing product",
-      "textAlignment": "LEFT",
-      "textPosition": "LEFT",
-      "font": "lexed",
-      "blockClass": ["texto-section-one-tablet"]
+      "props": {
+        "text": "An amazing product",
+        "textAlignment": "LEFT",
+        "textPosition": "LEFT",
+        "font": "lexed",
+        "blockClass": ["texto-section-one-phone"]
+      }
     }
   }
-}
+  
