--- a/store/blocks/tablet/components/main_slider-.jsonc
+++ b/store/blocks/tablet/components/main_slider-.jsonc
@@ -1,22 +1,24 @@
 {
     "flex-layout.row#tablet__main-slider": {
-    "children": ["list-context.image-list#phone__container-imagenes"]
-  },
-  "list-context.image-list#phone__container-imagenes": {
+        "children": [
+            "list-context.image-list#phone__container-imagenes"
+        ]
+    },
+    "list-context.image-list#phone__container-imagenes": {
     "title": "list image home banner",
     "children": ["slider-layout#phone__slider"],
     "props": {
       "height": 650,
       "images": [
         {
-          "image": "/arquivos/desktop-home-banner.png",
+          "image": "/arquivos/moviel-home.png",
           "description": "main image of the clock",
           "width": "100%",
           "link#id": {
             "props": {
               "label": "",
               "href": "#"
-            }
+             }
           }
         }
       ]
@@ -24,11 +26,11 @@
   },
   "slider-layout#phone__slider": {
     "props": {
-      "itemsPerPage": {
-        "desktop": 5,
-        "tablet": 3,
-        "phone": 1
-      }
+        "itemsPerPage": {
+            "desktop": 5,
+            "tablet": 3,
+            "phone": 1
+        }
     }
   }
 }
