--- a/store/blocks/desktop/components/main_slider--list-productos.jsonc
+++ b/store/blocks/desktop/components/main_slider--list-productos.jsonc
@@ -23,6 +23,13 @@
       "flex-layout.col#second__slider--container",
       "flex-layout.col#second__slider--container",
       "flex-layout.col#second__slider--container",
+      "flex-layout.col#second__slider--container",
+      "flex-layout.col#second__slider--container",
+      "flex-layout.col#second__slider--container",
+      "flex-layout.col#second__slider--container",
+      "flex-layout.col#second__slider--container",
+      "flex-layout.col#second__slider--container",
+      "flex-layout.col#second__slider--container",
       "flex-layout.col#second__slider--container"
     ]
   },
