--- a/store/blocks/desktop/components/main_slider-list-products-section-two.jsonc
+++ b/store/blocks/desktop/components/main_slider-list-products-section-two.jsonc
@@ -23,6 +23,11 @@
       "flex-layout.col#second__slider--container-section-two",
       "flex-layout.col#second__slider--container-section-two",
       "flex-layout.col#second__slider--container-section-two",
+      "flex-layout.col#second__slider--container-section-two",
+      "flex-layout.col#second__slider--container-section-two",
+      "flex-layout.col#second__slider--container-section-two",
+      "flex-layout.col#second__slider--container-section-two",
+      "flex-layout.col#second__slider--container-section-two",
       "flex-layout.col#second__slider--container-section-two"
     ]
   },
