Add configuration for new typography  Updated CSS to include new font styles  Applied new typography settings to various components

--- a/store/blocks/desktop/components/main_slider.jsonc
+++ b/store/blocks/desktop/components/main_slider.jsonc
@@ -14,7 +14,7 @@
           "image": "/arquivos/desktop-home-banner.png",
           "description": "main image of the clock",
           "width": "100%",
-          "link#image-banner": {
+          "link": {
             "props": {
               "label": "",
               "href": "#"
